# smithwaterman

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  LeftAlign.cpp  LeftAlign.h  Repeats.cpp  Repeats.h  SmithWatermanGotoh.cpp  SmithWatermanGotoh.h
